src/test/ui/struct-fields-too-many.stderr
error[E0560]: struct `BuildData` has no field named `bar`
  --> $DIR/struct-fields-too-many.rs:18:9
   |
18 |         bar: 0
   |         ^^^^ `BuildData` does not have this field
   |
   = note: available fields are: `foo`

error: aborting due to previous error

